<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blogtrotter</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_edit_note">Edit note</string>
    <string name="add_photo_tag">Add photo</string>
    <string name="show_big_map_tag">Show map</string>
    <string name="change_map_type">Map type</string>
    <string name="browse_photo_tag">Browse</string>    
    <string name="save_tag">Save</string>
    <string name="save_edited_note">Save note</string>
    <string name="save_edited_location">Save location</string>
    <string name="note_hint">Enter text of your note&#8230;</string>
    <string name="storage_alert">SD Memory Card Problem!</string>
    <string name="sql_update_alert">Problem with updating note!</string>
    <string name="copy_alert">Problem with copying file!</string>
    <string name="sql_update_confirm">Note updated</string>
    <string name="location_update_confirm">Location updated</string>
    <string name="remove_tag">delete all</string>
    <string name="title_activity_your_photo">Blogtrotter</string>
    <string name="title_activity_show_note">Blogtrotter</string>
    <string name="title_activity_big_map">Blogtrotter</string>
    <string name="title_activity_edit_note">Blogtrotter</string>
    <string name="title_activity_location_map">Blogtrotter</string>
    <string name="title_activity_export_note">Blogtrotter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>    
    <string name="neg_button">Cancel</string>
    <string name="pos_button">Yes</string>    
    <string name="save_img_msg">Saving image&#8230;</string>
    <string name="note_date">Date of note is not available.</string>
    <string name="note_text">Text of note is not available.</string>
    <string name="context_menu_edit_note">Edit note</string>
    <string name="context_menu_add_location">Add/Edit location</string>
    <string name="context_menu_restore_location">Restore original location</string>
    <string name="restore_confirm">Original location restored</string>
    <string name="delete_msg">Delete?</string>
    <string name="context_menu_delete_note">Delete this note</string>
    <string name="delete_record_msg">Are you sure you want to delete this note?</string>    
    <string name="context_menu_delete_all">Delete ALL notes</string>
    <string name="delete_all_msg">Are you sure you want to delete all notes?</string>
    <string name="context_menu_export_note">Send note to blog</string>
    <string name="blog_note_title_hint">Enter your blog note title&#8230;</string> 
    <string name="button_send_note">Send note</string>
    <string name="note_to_blog">Sending note to blog&#8230;</string>
    <string name="pref_blog_address">Blog address</string>
    <string name="pref_blog_address_settings">Server settings</string>
    <string name="pref_blog_address_summary">Address of blog with installed Blogtrotter Updater</string>
    <string name="pref_blog_address_default">http://infodump.pl/note</string>
    <string name="pref_blog_address_enter">Enter blog address</string>
    <string name="pref_blog_author">Blog author</string>
    <string name="pref_blog_author_settings">Author\'s name settings</string>
    <string name="pref_blog_author_enter">Enter author\'s name</string>
    <string name="pref_blog_author_summary">Name you want to use as author\'s name of your blog posts</string>
    <string name="pref_blog_author_default">Alan Smithee</string>
    <string name="pref_blog_author_id">One word nickname</string>
    <string name="pref_blog_author_id_enter">Enter one word nickname</string>
    <string name="pref_blog_author_id_summary">Short, one word id for your blog posts files on server</string>
    <string name="pref_blog_author_id_default">asmithee</string>
</resources>