<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
 <item
        android:id="@+id/con_menu_edit_note"
        android:orderInCategory="100"        
        android:title="@string/context_menu_edit_note"
        android:showAsAction="never"        
        />
 <item
        android:id="@+id/con_menu_add_location"
        android:orderInCategory="100"        
        android:title="@string/context_menu_add_location"
        android:showAsAction="never"        
        /> 
 <item
        android:id="@+id/con_menu_restore_location"
        android:orderInCategory="100"        
        android:title="@string/context_menu_restore_location"
        android:showAsAction="never"        
        /> 
 <item
        android:id="@+id/con_menu_export_note"
        android:orderInCategory="100"        
        android:title="@string/context_menu_export_note"
        android:showAsAction="never"        
        />
 <item
        android:id="@+id/con_menu_del"
        android:orderInCategory="100"        
        android:title="@string/context_menu_delete_note"
        android:showAsAction="never"        
        /> 
 <item
        android:id="@+id/con_menu_dell_all"
        android:orderInCategory="101"        
        android:title="@string/context_menu_delete_all"     
        android:showAsAction="never"        
        /> 		
</menu>